@@ -22,7 +22,21 @@
 
 import re
 import urllib
-from http import cookiejar
+
+#Python 2
+try: 
+    import cookielib
+    import urllib2
+    import sys
+    reload(sys)  # Reload does the trick!
+    sys.setdefaultencoding('UTF8')
+#Python 3
+except:
+    import http.cookiejar
+    cookielib = http.cookiejar
+    urllib2 = urllib.request
+
+
 import calendar
 from datetime import date
 import util
@@ -34,9 +48,22 @@ START_AZ = '<div class=\"row tv__archive tv__archive--list\">'
 END_AZ = '<div class="footer'
 AZ_ITER_RE = '<a title=\"(?P<title>[^"]+)\"(.+?)href=\"(?P<url>[^"]+)\"(.+?)<img src=\"(?P<img>[^"]+)\"(.+?)<span class=\"date\">(?P<date>[^<]+)<\/span>(.+?)<span class=\"program time--start\">(?P<time>[^<]+)'
 
+START_AZ_RADIO = '<li class=\"list--radio-series__list list__headers\">'
+END_AZ_RADIO = '<div class=\"box box--live\">'
+AZ_ITER_RE_RADIO = 'title=\"(?P<title>[^\"]+)\" href=\"(?P<url>[^\"]+)\".+?__station">(?P<station>[^\t]+).+?__series">(?P<series>[^<]+).+?__date">(?P<date>[^<]+)'
+
 START_DATE = '<div class=\"row tv__archive tv__archive--date\" data-js-tabs>'
 END_DATE = END_AZ
 DATE_ITER_RE = '<div class=\"media\">\s*<a href=\"(?P<url>[^\"]+)\".+?<img src=\"(?P<img>[^\"]+)\".+?<\/a>\s*<div class=\"media__body\">.+?<div class=\"program time--start\">(?P<time>[^\<]+)<span>.+?<a class=\"link\".+?title=\"(?P<title>[^\"]+)\">.+?<p class=\"perex\">(?P<plot>[^<]+)<\/p>'
+
+START_DATE_RADIO = '<li class=\"list--radio-series__list list__headers\">'
+END_DATE_RADIO = '<div class=\"box box--live\">'
+DATE_ITER_RE_RADIO = 'title=\"(?P<title>[^\"]+)\" href=\"(?P<url>[^\"]+)\".+?__station">(?P<station>[^\t]+).+?__series">(?P<series>[^<]+).+?__date">(?P<date>[^<]+)'
+
+
+RADIO_STATION_START = '<div class=\"box box--live\">'
+RADIO_STATION_END = '<!-- FOOTER -->'
+RADIO_STATION_ITER_RE = 'href=\"(?P<url>[^\"]+)\".+?title=\"(?P<title>[^\"]+)'
 
 START_LISTING = "<div class='calendar modal-body'>"
 END_LISTING = '</table>'
@@ -71,56 +98,118 @@ class RtvsContentProvider(ContentProvider):
 
     def __init__(self, username=None, password=None, filter=None, tmp_dir='/tmp'):
         ContentProvider.__init__(self, 'rtvs.sk', 'http://www.rtvs.sk/televizia/archiv', username, password, filter, tmp_dir)
-        opener = urllib.request.build_opener(urllib.request.HTTPCookieProcessor(cookiejar.LWPCookieJar()))
-        urllib.request.install_opener(opener)
+        opener = urllib2.build_opener(urllib2.HTTPCookieProcessor(cookielib.LWPCookieJar()))
+        urllib2.install_opener(opener)
 
     def _fix_url(self, url):
         if url.startswith('/json/') or url.startswith('/televizia/archiv/'):
             return 'http://www.rtvs.sk' + url
         return self._url(url)
 
+    def _fix_url_radio(self, url):
+        # self.info('_fix_url_radio url=' + url)
+        if url.startswith('/json/') or url.startswith('/radio/archiv/'):
+            return 'http://www.rtvs.sk' + url
+        return self._url(url)
+
+    def _get_url(self, radio=False):
+        url = 'http://www.rtvs.sk/televizia/archiv'
+        if radio:
+            url = 'http://www.rtvs.sk/radio/archiv'
+        # self.info('_get_url url=' + url)
+        return url
+
     def capabilities(self):
         return ['categories', 'resolve', '!download']
 
     def list(self, url):
+        # self.info('== list ==')
+        # self.info('url=' + url )
+      #  self.info('base_url=' + self.base_url)
+
         if url.find('#az#') == 0:
             return self.az()
-        if url.find('#live#') == 0:
+
+        elif url.find('#az_radio#') == 0:
+            return self.az_radio()
+
+        elif url.find('#live#') == 0:
             return self.live()
+
         elif url.find("#date#") == 0:
             month, year = url.split('#')[-1].split('.')
+            self.base_url = self._get_url()
             return self.date(int(year), int(month))
+        
+        elif url.find("#date_radio#") == 0:
+            month, year = url.split('#')[-1].split('.')
+            self.base_url = self._get_url(True)
+            return self.date_radio(int(year), int(month))
+
         elif url.find('ord=az') != -1 and url.find('l=') != -1:
             self.info('AZ listing: %s' % url)
-            return self.list_az(util.request(self._fix_url(url)))
+            if url.find('&radio=1') == -1:
+                return self.list_az(util.request(self._fix_url(url)))
+            else:
+                self.base_url = self._get_url(True)
+                return self.list_az_radio(util.request(self._fix_url_radio(url)))
+        
         elif url.find('ord=dt') != -1 and url.find('date=') != -1:
             self.info('DATE listing: %s' % url)
-            return self.list_date(util.request(self._fix_url(url)))
+            if url.find('&radio=1') == -1:
+                return self.list_date(util.request(self._fix_url(url)))
+            else:
+                self.base_url = self._get_url(True)
+                return self.list_date_radio(util.request(self._fix_url_radio(url)))
+        
         elif url.find('/json/') != -1:
             if url.find('snippet_archive_series_calendar.json'):
-                self.info("EPISODE listing (JSON): %s" % url)
-                return self.list_episodes(util.json.loads(util.request(self._fix_url(url)))['snippets']['snippet-calendar-calendar'])
+                if url.find('/radio/') == -1:
+                    return self.list_episodes(util.json.loads(util.request(self._fix_url(url)))['snippets']['snippet-calendar-calendar'])
+                else:
+                    self.base_url = self._get_url(True)
+                    return self.list_episodes(util.json.loads(util.request(self._fix_url_radio(url)))['snippets']['snippet-calendar-calendar'])
+
             else:
                 self.error("unknown JSON listing request: %s"% url)
         else:
             self.info("EPISODE listing: %s" % url)
-            return self.list_episodes(util.request(self._fix_url(url)))
+            if url.find('/radio/') == -1:
+                return self.list_episodes(util.request(self._fix_url(url)))
+            else:
+                return self.list_episodes(util.request(self._fix_url_radio(url)))
+
 
     def categories(self):
         result = []
-        item = self.dir_item()
-        item['title'] = '[B]A-Z[/B]'
-        item['url'] = "#az#"
-        result.append(item)
-        item = self.dir_item()
-        item['title'] = '[B]Podľa dátumu[/B]'
-        d = date.today()
-        item['url'] = "#date#%d.%d" % (d.month, d.year)
-        result.append(item)
+        # self.info ('== categories ==')
+        
         item = self.dir_item()
         item['title'] = '[B]Živé vysielanie[/B]'
         item['url'] = "#live#"
         result.append(item)
+
+        item = self.dir_item()
+        item['title'] = '[B][COLOR FFB2D4F5]TV:[/COLOR] A-Z[/B]'
+        item['url'] = "#az#"
+        result.append(item)
+        
+        item = self.dir_item()
+        item['title'] = '[B][COLOR FFB2D4F5]TV:[/COLOR] Podľa dátumu[/B]'
+        d = date.today()
+        item['url'] = "#date#%d.%d" % (d.month, d.year)
+        result.append(item)
+ 
+        item = self.dir_item()
+        item['title'] = '[B][COLOR FFB2D4F5]Rádio:[/COLOR] A-Z [/B]'
+        item['url'] = "#az_radio#"
+        result.append(item)
+
+        item = self.dir_item()
+        item['title'] = '[B][COLOR FFB2D4F5]Rádio:[/COLOR] Podľa dátumu[/B]'
+        item['url'] = "#date_radio#%d.%d" % (d.month, d.year)
+        result.append(item)
+        
         return result
 
     def getInfoFromWeb(self, item):
@@ -137,8 +226,54 @@ class RtvsContentProvider(ContentProvider):
         item['img'] = videodata.get('image','')
         return item
 
+    # def getInfoFromWebRadio(self, item):
+    #     # channel_id = item['url'].split('.')[1]
+    #     data = util.request(url)
+    #     videodata = util.json.loads(data)['clip']
+    #     url = videodata['sources'][0]['src']
+    #     url = ''.join(url.split())
+    #     # item['plot'] = videodata.get('title','')
+    #     title = videodata.get('title','')
+    #     if title != '':
+    #         item['title'] += ':  ' + title
+    #     item['plot'] = videodata.get('description','')
+    #     item['img'] = videodata.get('image','')
+    #     return item
+
+
+    def get_list_radios(self):
+        result = []
+        # self.info ('== get_list_radios ==')
+        page = util.request('http://www.rtvs.sk/radio/radia')
+        page = util.substr(page, RADIO_STATION_START, RADIO_STATION_END)
+        for m in re.finditer(RADIO_STATION_ITER_RE, page, re.IGNORECASE | re.DOTALL):
+            item = self.video_item()
+            item['title'] = m.group('title')
+            item['url'] = m.group('url')
+            item['menu'] = {'$30070':{'list':item['url'], 'action-type':'list'}}
+            # self.info(item)
+            self._filter(result, item)
+        return result
+
+    def get_live_radio(self, url):
+        result = []
+        # self.info ('== get_list_radios ==')
+        # self.info(page)
+        page = util.request('http://www.rtvs.sk/radio/radia')
+        page = util.substr(page, RADIO_STATION_START, RADIO_STATION_END)
+        # self.info(page)
+        for m in re.finditer(RADIO_STATION_ITER_RE, page, re.IGNORECASE | re.DOTALL):
+            item = self.video_item()
+            item['title'] = m.group('title')
+            item['url'] = m.group('url')
+            item['menu'] = {'$30070':{'list':item['url'], 'action-type':'list'}}
+            # self.info(item)
+            self._filter(result, item)
+        return result
+
     def live(self):
         result = []
+        # self.info ('== live ==')
 
         item = self.video_item("live.1")
         item['title'] = "STV 1"
@@ -169,10 +304,18 @@ class RtvsContentProvider(ContentProvider):
         item['title'] = "STV NRSR"
         item = self.getInfoFromWeb(item)
         result.append(item)
+
+        item = self.video_item("live.3")
+        item['title'] = "STV 3"
+        item = self.getInfoFromWeb(item)
+        result.append(item)
+
+        result += self.get_list_radios()
         
         return result
 
     def az(self):
+        # self.info ('== az ==')
         result = []
         item = self.dir_item()
         item['title'] = '0-9'
@@ -186,7 +329,23 @@ class RtvsContentProvider(ContentProvider):
             self._filter(result, item)
         return result
 
+    def az_radio(self):
+        # self.info ('== az_radio ==')
+        result = []
+        item = self.dir_item()
+        item['title'] = '0-9'
+        item['url'] = '?l=9&ord=az&radio=1'
+        self._filter(result, item)
+        for c in range(65, 91, 1):
+            uchr = str(chr(c))
+            item = self.dir_item()
+            item['title'] = uchr
+            item['url'] = '?l=%s&ord=az&radio=1' % uchr.lower()
+            self._filter(result, item)
+        return result
+
     def date(self, year, month):
+        # self.info ('== date ==')
         result = []
         today = date.today()
         prev_month = month > 0 and month - 1 or 12
@@ -205,9 +364,34 @@ class RtvsContentProvider(ContentProvider):
             item['url'] = "?date=%d-%02d-%02d&ord=dt" % (d.year, d.month, d.day)
             self._filter(result, item)
         result.reverse()
+        # self.info(result)
+        return result
+
+    def date_radio(self, year, month):
+        # self.info ('== date_radio ==')
+        result = []
+        today = date.today()
+        prev_month = month > 0 and month - 1 or 12
+        prev_year = prev_month == 12 and year - 1 or year
+        item = self.dir_item()
+        item['type'] = 'prev'
+        item['url'] = "#date#%d.%d&radio=1" % (prev_month, prev_year)
+        result.append(item)
+        for d in calendar.LocaleTextCalendar().itermonthdates(year, month):
+            if d.month != month:
+                continue
+            if d > today:
+                break
+            item = self.dir_item()
+            item['title'] = "%d.%d %d" % (d.day, d.month, d.year)
+            item['url'] = "?date=%d-%02d-%02d&ord=dt&radio=1" % (d.year, d.month, d.day)
+            self._filter(result, item)
+        result.reverse()
+        # self.info(result)
         return result
 
     def list_az(self, page):
+        # self.info ('== list_az ==')
         result = []
         page = util.substr(page, START_AZ, END_AZ)
         for m in re.finditer(AZ_ITER_RE, page, re.IGNORECASE | re.DOTALL):
@@ -222,8 +406,26 @@ class RtvsContentProvider(ContentProvider):
             self._filter(result, item)
         return result
 
+    def list_az_radio(self, page):
+        # self.info ('== list_az_radio ==')
+        result = []
+        page = util.substr(page, START_AZ_RADIO, END_AZ_RADIO)
+        for m in re.finditer(AZ_ITER_RE_RADIO, page, re.IGNORECASE | re.DOTALL):
+            item = self.dir_item()
+           # self.info(m.group())
+            semicolon = m.group('title').find(':')
+            if semicolon != -1:
+                item['title'] = m.group('title')[:semicolon].strip()
+            else:
+                item['title'] = m.group('title')
+           # item['img'] = self._fix_url_radio(m.group('img'))
+            item['url'] = m.group('url')
+            self._filter(result, item)
+        return result
+
     def list_date(self, page):
         result = []
+        # self.info ('== list_date ==')
         page = util.substr(page, START_DATE, END_DATE)
         page = re.sub('<p class=\"perex\"></p>', '<p class=\"perex\">&nbsp;</p>', page)
         # self.info(page)
@@ -238,17 +440,42 @@ class RtvsContentProvider(ContentProvider):
             self._filter(result, item)
         return result
 
+
+    def list_date_radio(self, page):
+        result = []
+        self.info ('== list_date_radio ==')
+        # self.info(page)
+        page = util.substr(page, START_DATE_RADIO, END_DATE_RADIO)
+        #page = re.sub('<p class=\"perex\"></p>', '<p class=\"perex\">&nbsp;</p>', page)
+        # self.info(page)
+        for m in re.finditer(DATE_ITER_RE_RADIO, page, re.IGNORECASE | re.DOTALL):
+            item = self.video_item()
+            item['title'] = "%s (%s)" % (m.group('title'), m.group('date'))
+            #item['img'] = self._fix_url_radio(m.group('img'))
+            item['url'] = m.group('url') #+ '?radio=1'
+            item['plot'] = m.group('series')
+            item['menu'] = {'$30070':{'list':item['url'], 'action-type':'list'}}
+            # self.info(item)
+            self._filter(result, item)
+        return result
+
     def list_episodes(self, page):
         result = []
         episodes = []
+        # self.info ('== list_episodes ==')
         page = util.substr(page, START_LISTING, END_LISTING)
         current_date = to_unicode(re.search(LISTING_DATE_RE, page, re.IGNORECASE | re.DOTALL).group('date'))
         self.info("<list_episodes> current_date: %s" % current_date)
         prev_url = re.search(LISTING_PAGER_RE, page, re.IGNORECASE | re.DOTALL).group('prevurl')
         prev_url = re.sub('&amp;', '&', prev_url)
-        #self.info("<list_episodes> prev_url: %s" % prev_url)
-        for m in re.finditer(LISTING_ITER_RE, page, re.IGNORECASE | re.DOTALL):
-            episodes.append([self._fix_url(re.sub('&amp;', '&', m.group('url'))), m])
+        self.info("<list_episodes> prev_url: %s" % prev_url)
+        if prev_url.find('_radio_') == -1:
+            for m in re.finditer(LISTING_ITER_RE, page, re.IGNORECASE | re.DOTALL):
+                episodes.append([self._fix_url(re.sub('&amp;', '&', m.group('url'))), m])
+        else:
+             for m in re.finditer(LISTING_ITER_RE, page, re.IGNORECASE | re.DOTALL):
+                episodes.append([self._fix_url_radio(re.sub('&amp;', '&', m.group('url'))), m])
+
         self.info("<list_episodes> found %d episodes" % len(episodes))
         res = self._request_parallel(episodes)
         for p, m in res:
@@ -277,6 +504,8 @@ class RtvsContentProvider(ContentProvider):
 
     def resolve(self, item, captcha_cb=None, select_cb=None):
         result = []
+        # self.info(' == resolve ==')
+        # self.info ( item )
         item = item.copy()
         if item['url'].startswith('live.'):
             channel_id = item['url'].split('.')[1]
@@ -292,6 +521,41 @@ class RtvsContentProvider(ContentProvider):
                 item['quality'] = stream['quality']
                 item['img'] = videodata.get('image','')
                 result.append(item)
+
+        elif item['url'].find('/player/') != -1:
+            #channel_id = item['url'].split('.')[1]
+            data = util.request('http:' + item['url'])
+
+            url = re.search('src: "(?P<url>[^\"]+)', data, re.IGNORECASE | re.DOTALL).group('url')
+
+            # videodata = util.json.loads(data)['clip']
+            # url = videodata['sources'][0]['src']
+            # url = ''.join(url.split()) # remove whitespace \n from URL
+            # #process m3u8 playlist
+            # for stream in get_streams_from_manifest_url(url):
+            #     item = self.video_item()
+            #item['title'] = videodata.get('title','')
+            item['url'] = url
+            item['type'] = 'audio/mp3'
+            #item['img'] = videodata.get('image','')
+            result.append(item)
+
+        elif item['url'].find('/radio/') != -1:
+            audio_id = item['url'].split('/')[-1]
+            audio_id0 = item['url'].split('/')[-2]
+            self.info("<resolve> audioid: %s" % audio_id)
+            embed_data = util.request("http://www.rtvs.sk/embed/radio/archive/%s/%s"%(audio_id0, audio_id))
+            audio_id = re.search('audio5f\.json\?id=(?P<id>[^\"]+)', embed_data, re.IGNORECASE | re.DOTALL).group('id')
+            audiodata = util.json.loads(util.request("http://www.rtvs.sk/json/audio5f.json?id=" + audio_id))
+            for v in audiodata['playlist'][0]['sources']:
+                url =  v['src']
+                if '.mp3' in url:                    
+                    item['title'] = audiodata.get('title','')
+                    item['surl'] = item['title']
+                    item['url'] = url
+                    item['type'] = v['type']
+                    result.append(item)
+                    # self.info(item)
         else:
             video_id = item['url'].split('/')[-1]
             self.info("<resolve> videoid: %s" % video_id)
@@ -307,6 +571,7 @@ class RtvsContentProvider(ContentProvider):
                         item['url'] = stream['url']
                         item['quality'] = stream['quality']
                         result.append(item)
+
         self.info("<resolve> playlist: %d items" % len(result))
         map(self.info, ["<resolve> item(%d): title= '%s', url= '%s'" % (i, it['title'], it['url']) for i, it in enumerate(result)])
         if len(result) > 0 and select_cb:
